<resources>
    <string name="app_name">SiteManagement</string>
    <string name="action_settings">Settings</string>
    <string name="labour">Labour</string>
    <string name="skilled">Skilled</string>
    <string name="non_skilled">Non-Skilled</string>
    <string name="labourName">Labour Name</string>
    <string name="hours">Over Time hours</string>
    <string name="over_time">Over Time</string>
    <string name="days">Days</string>
    <string name="date">Date</string>
    <string name="contractor">Contractor</string>
    <string name="no_work">NO Work</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="material">Material</string>
    <string name="machine">Machine</string>
    <string name="test">Test Block</string>
    <string name="title_activity_material">MaterialActivity</string>
    <string name="title_activity_labour">LabourActivity</string>
</resources>
