<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/activity_home">

    <ImageButton
        android:id="@+id/machineBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/machine"
        android:onClick="manageHomeButtonActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_machine" />

    <ImageButton
        android:id="@+id/labourBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/labour"
        android:onClick="manageHomeButtonActions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_labour" />

    <ImageButton
        android:id="@+id/materialBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/material"
        android:onClick="manageHomeButtonActions"
        app:layout_constraintEnd_toStartOf="@+id/machineBut"
        app:layout_constraintStart_toEndOf="@+id/labourBut"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_material" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/test"
        android:onClick="manageHomeButtonActions"
        app:layout_constraintEnd_toStartOf="@+id/materialBut"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/labourBut"
        app:layout_constraintTop_toBottomOf="@+id/labourBut"
        app:srcCompat="@drawable/ic_action_blocktest" />
</android.support.constraint.ConstraintLayout>